correction contraste

--- a/style.css
+++ b/style.css
@@ -848,6 +848,7 @@ h4 {
     font-size: 2rem;
     font-style: italic;
     color: rgba(0, 0, 0, .7);
+    padding: 0 15px 0 15px;
 }
 
 .auteur{
@@ -878,6 +879,12 @@ h4 {
 .center-box{
     margin-left: auto;
     margin-right: auto;
+}
+
+.background-dark{
+    background-color: rgba(51,51,51,0.7);
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 @media (max-width: 1024px) {
